--- a/JavaBackFront/server/pom.xml
+++ b/JavaBackFront/server/pom.xml
@@ -22,6 +22,16 @@
   <dependencies>
 
 
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-fileupload2-jakarta-servlet6 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-fileupload2-jakarta-servlet6</artifactId>
+    <version>2.0.0-M2</version>
+</dependency>
+
+
+
+
 <!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-servlet -->
 <dependency>
     <groupId>com.google.inject.extensions</groupId>
