--- a/JavaBackFront/server/src/main/resources/Simple_appsettings.json
+++ b/JavaBackFront/server/src/main/resources/Simple_appsettings.json
@@ -14,6 +14,7 @@
     },
     "token":{
 
-        "lifetime":300
+        "lifetime":300,
+        "secretkey":"Your  Secret key for JWT"
     }
 }
