DiskStorageService inject config

--- a/JavaBackFront/server/src/main/resources/Simple_appsettings.json
+++ b/JavaBackFront/server/src/main/resources/Simple_appsettings.json
@@ -16,5 +16,9 @@
 
         "lifetime":300,
         "secretkey":"Your  Secret key for JWT"
+    },
+    "storage":{
+
+        "path":"your path storage"
     }
 }
